@@ -2,13 +2,13 @@ def baseConfig = {
     owner = 'ksql'
     slackChannel = '#ksql-alerts'
     ksql_db_version = "0.12.0"  // next version to be released
-    cp_version = "6.1.0-beta200715032424"  // must be a beta version from the packaging build
+    cp_version = "6.1.0-beta200812051054"  // must be a beta version from the packaging build
     packaging_build_number = "1"
     default_git_revision = 'refs/heads/master'
     dockerRegistry = '368821881613.dkr.ecr.us-west-2.amazonaws.com/'
     dockerArtifacts = ['confluentinc/ksqldb-docker', 'confluentinc/ksqldb-docker']
     dockerRepos = ['confluentinc/ksqldb-cli', 'confluentinc/ksqldb-server']
-    nodeLabel = 'docker-oraclejdk8-compose-swarm'
+    nodeLabel = 'docker-openjdk11-compose-swarm'
     dockerScan = true
     cron = '@daily'
     maven_packages_url = "https://jenkins-confluent-packages-beta-maven.s3-us-west-2.amazonaws.com"
@@ -210,12 +210,12 @@ def job = {
 
                             // Set the project versions in the pom files
                             sh "set -x"
-                            sh "mvn --batch-mode versions:set -DnewVersion=${config.ksql_db_artifact_version} -DgenerateBackupPoms=false"
+                            sh "mvn --batch-mode org.codehaus.mojo:versions-maven-plugin:2.7:set -DnewVersion=${config.ksql_db_artifact_version} -DgenerateBackupPoms=false"
 
                             // Set the version of the parent project to use.
                             sh "mvn --batch-mode versions:update-parent -DparentVersion=\"[${config.cp_version}]\" -DgenerateBackupPoms=false"
 
-                            cmd = "mvn --batch-mode -Pjenkins clean package dependency:analyze site validate -U "
+                            cmd = "mvn --batch-mode -Pjenkins clean install dependency:analyze-only site validate -U "
                             cmd += "-DskipTests "
                             cmd += "-Dspotbugs.skip "
                             cmd += "-Dcheckstyle.skip "
@@ -228,6 +228,15 @@ def job = {
                                 sh cmd
                             }
                             step([$class: 'hudson.plugins.findbugs.FindBugsPublisher', pattern: '**/*bugsXml.xml'])
+
+                            if (config.release) {
+                                dir('ksqldb-api-client') {
+                                    withEnv(['MAVEN_OPTS=-XX:MaxPermSize=128M']) {
+                                        sh "mvn javadoc:javadoc"
+                                    }
+                                    sh "git add -f ../docs/developer-guide/ksqldb-clients/java-client/api"
+                                }
+                            }
 
                             sh "cp ${settingsFile} ."
 
@@ -260,7 +269,7 @@ def job = {
                                 bash extract-iam-credential.sh
                             '''
                             withEnv(['MAVEN_OPTS=-XX:MaxPermSize=128M']) {
-                                cmd = "mvn --batch-mode -Pjenkins deploy -DskipTests -Ddocker.skip-build=true -Ddocker.skip-test=true"
+                                cmd = "mvn --batch-mode -Pjenkins deploy -DskipTests -Dcheckstyle.skip -Dspotbugs.skip -Ddocker.skip-build=true -Ddocker.skip-test=true"
                                 cmd += " -DaltDeploymentRepository=confluent-artifactory-central::default::s3://staging-ksqldb-maven/maven"
                                 cmd += " -DrepositoryId=confluent-artifactory-central"
                                 cmd += " -DnexusUrl=s3://staging-ksqldb-maven/maven"
